# RL-SCS

./: CLAUDE.md  README.md  pyproject.toml  run_game.py
docs/: api-spec.md  architecture.md  goals.md  implementation-plan.md  install.md
docs/miaosuan/: INDEX.md  about.md  faq.md  reference.md
docs/miaosuan/reference/: actions.md  apis.md  install.md  map.md  observations.md  scenario.md  usage.md  weapons.md
docs/miaosuan/rules/: elements.md  others.md  process.md  rules.md  tables.md
docs/miaosuan/tutorials/: basic.md  replay_system.md  shortcuts.md  upload.md  videos.md
src/rl_scs/: SCS_Game.py
src/rl_scs/render/: Color.py  CounterCreator.py  SCS_Renderer.py  fonts.py
