[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rl-scs"
version = "0.1.0"
description = "A reinforcement learning implementation for Standard Combat Series (SCS) - a hexagonal tile-based strategy game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy~=1.21",
    "torch~=2.0",
    "PyYAML~=6.0",
    "termcolor~=2.0",
    "pygame-ce~=2.5",
    "gymnasium~=1.1",
    "pettingzoo",
]

[tool.flit.module]
name = "rl_scs"

[dependency-groups]
dev = [
    "pytest~=7.4",
    "pytest-cov~=4.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
filterwarnings = [
    "ignore:Agent's maximum observation space value is infinity:UserWarning",
    "ignore:Environment has not defined a render\\(\\) method:UserWarning",
]
markers = [
    "api: PettingZoo API compliance tests",
    "stress: Long-running stress tests (2000 cycles)",
]
