[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rl-scs"
version = "0.1.0"
description = "A reinforcement learning implementation for Standard Combat Series (SCS) - a hexagonal tile-based strategy game"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "torch>=2.9.0",
    "PyYAML~=6.0",
    "termcolor~=2.0",
    "pygame-ce~=2.5",
    "gymnasium~=1.2",
    "pettingzoo~=1.25",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.flit.module]
name = "rl_scs"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
filterwarnings = [
    "ignore:Agent's maximum observation space value is infinity:UserWarning",
    "ignore:Environment has not defined a render\\(\\) method:UserWarning",
]
markers = [
    "api: PettingZoo API compliance tests",
    "stress: Long-running stress tests (2000 cycles)",
]
